Fix index page spacing

--- a/static/styles/pages/index.css
+++ b/static/styles/pages/index.css
@@ -1,3 +1,3 @@
-﻿h1{margin:0}main p{margin:1em 0;font-family:"Suisse Works","Georgia Pro","Georgia","Times Europa","Times New Roman","Hiragino Mincho","ヒラギノ明朝","YuMincho","Yu Mincho","游明朝","Noto Serif","Droid Serif Japanese","Takao Mincho",serif}.last-updated{white-space:nowrap}.last-updated::before{content:" "}.last-updated .marker{font-size:70%;font-variant-caps:small-caps}
+﻿h1{margin:0}main p{margin:1em 0;font-family:"Suisse Works","Georgia Pro","Georgia","Times Europa","Times New Roman","Hiragino Mincho","ヒラギノ明朝","YuMincho","Yu Mincho","游明朝","Noto Serif","Droid Serif Japanese","Takao Mincho",serif}.last-updated{white-space:nowrap}.last-updated .marker{font-size:70%;font-variant-caps:small-caps}.last-updated .marker::before{content:" "}
 
 /*# sourceMappingURL=index.css.map */
